# FanTracer

./: .gitignore  README.md
lib/: Readme.md
lib/includes/funny_defines/: c_api.h  classes.h
lib/includes/tracer/: geometry.h  interfaces.h  lights.h  shapes.h  vector3d.h
lib/includes/tracer/c_api/: core.h  materials.h  structs.h  vector3d.hpp
lib/includes/tracer/core/: logicalmask3d.hpp  matrix3d.h  matrix3d.hpp  vector3d.hpp
lib/includes/tracer/geometry/: aabb.h  hit_record.h  random.h  ray.h  vector3d.h
lib/includes/tracer/interfaces/: light.h  material.h  shape.h  shape_group.h
lib/includes/tracer/lights/: point_light.h
lib/includes/tracer/materials/: lambertian.h  mirror.h
lib/includes/tracer/scene/: camera.h  scene.h
lib/includes/tracer/shapes/: cylinder.h  obj_model.h  orientedbox.h  sphere.h  triangle.h
lib/includes/tracer/structs/: aabb.h  ray.h
lib/src/: Template.mk
lib/src/funny_defines/: Makefile  c_api.h
lib/src/tracer/: Makefile  core.h  geometry.h  interfaces.h  libmain.cpp  libmain.h  materials.h  shapes.h  vector3d.cpp
lib/src/tracer/c_api/: all.h  scene.h
lib/src/tracer/core/: float3.h  logicalmask3d.cpp  logicalmask3d.h  matrix3d.cpp  matrix3d.h  vector3d.cpp  vector3d.h
lib/src/tracer/geometry/: aabb.h  hit_record.h  random.cpp  random.h  ray.h  rotate.cpp  rotate.h  vector3d.cpp  vector3d.h
lib/src/tracer/interfaces/: light.h  material.h  shape.h  shape_group.cpp  shape_group.h
lib/src/tracer/lights/: point_light.cpp  point_light.h  sky_light.cpp  sky_light.h
lib/src/tracer/materials/: glass.cpp  glass.h  lambertian.cpp  lambertian.h  metal.cpp  metal.h  mirror.cpp  mirror.h
lib/src/tracer/scene/: camera.cpp  camera.h  scene.cpp  scene.h
workspace/: CMakeLists.txt  main.c  main.cpp
workspace/examples/: main1.c  main1.cpp
workspace/tests/: core.c  scene.c  structs.c
(+71 files in other folders)
